Support for document dates and bug fixes.

--- a/OpenLawOffice.WebClient/Web.config
+++ b/OpenLawOffice.WebClient/Web.config
@@ -23,7 +23,7 @@
                   tempPath="E:\Temp\Temp\" />
     <system timezone="Central Standard Time">
       <globalTaskTagFilters>
-        <tagFilter name="tag1" category="Status" tag="Pending" />
+        <tagFilter name="tag1" category="Active" tag="Yes" />
       </globalTaskTagFilters>
     </system>
   </openLawOffice>
@@ -31,7 +31,7 @@
   <connectionStrings>
     <!--<add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient" />-->
     <!-- TODO: Replace the ****'s with the correct entries -->
-    <add name="Postgres" providerName="Npgsql" connectionString="server=localhost;Port=5432;Database=a1;User Id=postgres;Password=postgres;" />
+    <add name="Postgres" providerName="Npgsql" connectionString="server=localhost;Port=5432;Database=OpenLawOffice;User Id=postgres;Password=postgres;" />
     <add name="elmah-postgresql" connectionString="Server=****;Port=****;Database=****;User Id=****;Password=****;" />
   </connectionStrings>
 
