--- a/OpenLawOffice.WebClient/Web.Release.config
+++ b/OpenLawOffice.WebClient/Web.Release.config
@@ -13,7 +13,13 @@
         connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True"
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
     </connectionStrings>
+    
   -->
+  <connectionStrings>
+    <add name="Postgres" providerName="Npgsql" 
+         connectionString="server=192.168.10.40;Port=5432;Database=OpenLawOffice;User Id=postgres;Password=postgres;" 
+         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+  </connectionStrings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
