--- a/OpenLawOffice.WebClient/Web.config
+++ b/OpenLawOffice.WebClient/Web.config
@@ -29,10 +29,7 @@
   </openLawOffice>
 
   <connectionStrings>
-    <!--<add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient" />-->
-    <!-- TODO: Replace the ****'s with the correct entries -->
-    <add name="Postgres" providerName="Npgsql" connectionString="server=localhost;Port=5432;Database=OpenLawOffice;User Id=postgres;Password=postgres;" />
-    <add name="elmah-postgresql" connectionString="Server=****;Port=****;Database=****;User Id=****;Password=****;" />
+    <add name="Postgres" providerName="Npgsql" connectionString="server=192.168.10.50;Port=5432;Database=OpenLawOffice;User Id=postgres;Password=postgres;" />
   </connectionStrings>
 
   <system.data>
