--- a/OpenLawOffice.WebClient/Web.config
+++ b/OpenLawOffice.WebClient/Web.config
@@ -43,9 +43,9 @@
 
   <system.net>
     <mailSettings>
-      <smtp deliveryMethod="Network" from="x@gmail.com">
+      <smtp deliveryMethod="Network" from="lucasnodine@gmail.com">
         <!-- Note: You need to provide your STMP settings -->
-        <network host="smtp.gmail.com" port="587" enableSsl="true" defaultCredentials="false" userName="x" password="x" />
+        <network host="smtp.gmail.com" port="587" enableSsl="true" defaultCredentials="false" userName="lucasnodine" password="zy6jp57q" />
       </smtp>
     </mailSettings>
   </system.net>
