--- a/OpenLawOffice.WebClient/Web.config
+++ b/OpenLawOffice.WebClient/Web.config
@@ -89,8 +89,7 @@
         <add name="PgProfileProvider" type="OpenLawOffice.Data.PostgreSQLProvider.PgProfileProvider" connectionStringName="Postgres" applicationName="Website" />
       </providers>
       <properties>
-        <add name="FirstName" />
-        <add name="LastName" />
+        <add name="ContactId" />
       </properties>
     </profile>
     <sessionState mode="Custom" customProvider="PgSessionStateStoreProvider">
