Added ability for admin to change a password to a specific password and fixed some bugs.

--- a/OpenLawOffice.WebClient/OpenLawOffice.WebClient.csproj
+++ b/OpenLawOffice.WebClient/OpenLawOffice.WebClient.csproj
@@ -236,6 +236,7 @@
     <Content Include="Views\Account\RecoveryEmailSent.aspx" />
     <Content Include="Views\Account\Register.aspx" />
     <Content Include="Views\Account\EditUser.aspx" />
+    <Content Include="Views\Admin\ChangePassword.aspx" />
     <Content Include="Views\Admin\CreateUser.aspx" />
     <Content Include="Views\Admin\DetailsUser.aspx" />
     <Content Include="Views\Admin\DisableUser.aspx" />
