--- a/OpenLawOffice.WebClient/Web.Release.config
+++ b/OpenLawOffice.WebClient/Web.Release.config
@@ -17,7 +17,7 @@
   -->
   <connectionStrings>
     <add name="Postgres" providerName="Npgsql" 
-         connectionString="server=192.168.10.40;Port=5432;Database=OpenLawOffice;User Id=postgres;Password=postgres;" 
+         connectionString="server=localhost;Port=5432;Database=OpenLawOffice;User Id=postgres;Password=postgres;" 
          xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
   </connectionStrings>
   <system.web>
