--- a/OpenLawOffice.WebClient/Web.config
+++ b/OpenLawOffice.WebClient/Web.config
@@ -32,7 +32,7 @@
   </openLawOffice>
 
   <connectionStrings>
-    <add name="Postgres" providerName="Npgsql" connectionString="server=192.168.10.50;Port=5432;Database=a;User Id=postgres;Password=postgres;" />
+    <add name="Postgres" providerName="Npgsql" connectionString="server=localhost;Port=5432;Database=OpenLawOffice;User Id=postgres;Password=postgres;" />
   </connectionStrings>
 
   <system.data>
