--- a/OpenLawOffice.WebClient/OpenLawOffice.WebClient.csproj
+++ b/OpenLawOffice.WebClient/OpenLawOffice.WebClient.csproj
@@ -14,6 +14,7 @@
     <AssemblyName>OpenLawOffice.WebClient</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
+    <UseIISExpress>false</UseIISExpress>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -176,6 +177,7 @@
     <Compile Include="ViewModels\Tasks\TaskTagViewModel.cs" />
     <Compile Include="ViewModels\Tasks\TaskTimeViewModel.cs" />
     <Compile Include="ViewModels\Tasks\TaskViewModel.cs" />
+    <Compile Include="ViewModels\Timing\DayViewModel.cs" />
     <Compile Include="ViewModels\Timing\TimeViewModel.cs" />
     <Compile Include="ViewModels\ValidatePasswordLengthAttribute.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
