Some work on issue #41.  This handles the time entry, the hourglass will automatically advance 6 minute intervals.  If no data is supplied in stop, it will look at the current browser time and insert it to the nearest 6 minute interval.  Still need to check for overlap as stated in the last paragraph of issue #41.

--- a/OpenLawOffice.WebClient/OpenLawOffice.WebClient.csproj
+++ b/OpenLawOffice.WebClient/OpenLawOffice.WebClient.csproj
@@ -194,6 +194,7 @@
     <Content Include="Content\fugue-icons-3.5.6\icons-shadowless\download-cloud.png" />
     <Content Include="Content\fugue-icons-3.5.6\icons-shadowless\exclamation-shield.png" />
     <Content Include="Content\fugue-icons-3.5.6\icons-shadowless\gear-arrow.png" />
+    <Content Include="Content\fugue-icons-3.5.6\icons-shadowless\hourglass-select.png" />
     <Content Include="Content\fugue-icons-3.5.6\icons-shadowless\pencil.png" />
     <Content Include="Content\fugue-icons-3.5.6\icons-shadowless\question.png" />
     <Content Include="Content\fugue-icons-3.5.6\icons-shadowless\user-arrow.png" />
