--- a/OpenLawOffice.WebClient/OpenLawOffice.WebClient.csproj
+++ b/OpenLawOffice.WebClient/OpenLawOffice.WebClient.csproj
@@ -193,11 +193,14 @@
     <Content Include="Content\fugue-icons-3.5.6\icons-shadowless\calendar-arrow.png" />
     <Content Include="Content\fugue-icons-3.5.6\icons-shadowless\cross.png" />
     <Content Include="Content\fugue-icons-3.5.6\icons-shadowless\download-cloud.png" />
+    <Content Include="Content\fugue-icons-3.5.6\icons-shadowless\exclamation-red-frame.png" />
     <Content Include="Content\fugue-icons-3.5.6\icons-shadowless\exclamation-shield.png" />
     <Content Include="Content\fugue-icons-3.5.6\icons-shadowless\gear-arrow.png" />
     <Content Include="Content\fugue-icons-3.5.6\icons-shadowless\hourglass-select.png" />
     <Content Include="Content\fugue-icons-3.5.6\icons-shadowless\pencil.png" />
+    <Content Include="Content\fugue-icons-3.5.6\icons-shadowless\plus.png" />
     <Content Include="Content\fugue-icons-3.5.6\icons-shadowless\question.png" />
+    <Content Include="Content\fugue-icons-3.5.6\icons-shadowless\task-arrow.png" />
     <Content Include="Content\fugue-icons-3.5.6\icons-shadowless\user-arrow.png" />
     <Content Include="Content\fullcalendar.css" />
     <Content Include="Content\fullcalendar.print.css" />
