--- a/OpenLawOffice.WebClient/Web.config
+++ b/OpenLawOffice.WebClient/Web.config
@@ -21,7 +21,13 @@
     <fileStorage currentVersionPath="E:\Temp\Current\" previousVersionsPath="E:\Temp\Previous\" tempPath="E:\Temp\Temp\" />
 
     <!-- If you look here for my email, you won't get me, I never check this.-->
-    <system timezone="Central Standard Time" adminEmail="lucas_nodine_01@hotmail.com" passwordRetrievalFromEmail="lucas_nodine_01@hotmail.com" websiteUrl="http://localhost:62914/">
+    <system timezone="Central Standard Time" adminEmail="lucas_nodine_01@hotmail.com" 
+            passwordRetrievalFromEmail="lucas_nodine_01@hotmail.com" 
+            websiteUrl="http://localhost:62914/" 
+            office365AuthEndpoint="" 
+            office365TokenEndpoint="" 
+            office365ClientId="" 
+            office365ClientKey="">
       <globalTaskTagFilters>
         <tagFilter name="tag1" category="Active" tag="Yes" />
       </globalTaskTagFilters>
@@ -83,6 +89,8 @@
       </providers>
       <properties>
         <add name="ContactId" />
+        <add name="Office365AccessToken" />
+        <add name="Office365RefreshToken" />
       </properties>
     </profile>
     <sessionState mode="Custom" customProvider="PgSessionStateStoreProvider">
@@ -131,14 +139,26 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0" newVersion="2.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Npgsql" publicKeyToken="5d8b90d52f46fda7" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.1.3.0" newVersion="2.1.3.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.2.28.0" newVersion="2.2.28.0" />
+      </dependentAssembly>
     </assemblyBinding>
-  </runtime>
+  <!-- When targeting ASP.NET MVC 3, this assemblyBinding makes MVC 1 and 2 references relink
+		     to MVC 3 so libraries such as DotNetOpenAuth that compile against MVC 1 will work with it.
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
+				<bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+			</dependentAssembly>
+		</assemblyBinding>
+		 --></runtime>
 
   <elmah>
     <!--
