--- a/OpenLawOffice.WebClient/packages.config
+++ b/OpenLawOffice.WebClient/packages.config
@@ -5,5 +5,6 @@
   <package id="elmah" version="1.2.2" targetFramework="net40" />
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net40" />
   <package id="elmah.postgresql" version="1.2" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net40" />
   <package id="Npgsql" version="2.1.3" targetFramework="net40" />
 </packages>
