--- a/OpenLawOffice.WebClient/Web.config
+++ b/OpenLawOffice.WebClient/Web.config
@@ -35,7 +35,7 @@
   </openLawOffice>
 
   <connectionStrings>
-    <add name="Postgres" providerName="Npgsql" connectionString="server=localhost;Port=5432;Database=OpenLawOffice;User Id=postgres;Password=postgres;" />
+    <add name="Postgres" providerName="Npgsql" connectionString="server=192.168.11.21;Port=5432;Database=olo_Development;User Id=dev;Password=dev;" />
   </connectionStrings>
 
   <system.data>
